--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="furkan"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+     <link rel="icon" type="image/png" href="/man.png" />
+   
 
     <title>furkan</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>F</noscript>
     <div id="root"></div>
 
   </body>
